@@ -278,77 +278,80 @@ SPI NAND Flash Support List:
 025. MXIC MX35LF2GE4AB
 026. MXIC MX35LF2G14AC
 027. MXIC MX35LF2GE4AD
-028. MXIC MX35UF1GE4AD
-029. MXIC MX35UF2GE4AD
-030. MXIC MX35UF4GE4AD
-031. ZENTEL A5U12A21ASC
-032. ZENTEL A5U1GA21BWS
-033. ETRON EM73C044SNB
-034. ETRON EM73C044SND
-035. ETRON EM73C044SNF
-036. ETRON EM73C044VCA
-037. ETRON EM73C044VCD
-038. ETRON EM73D044VCA
-039. ETRON EM73D044VCB
-040. ETRON EM73D044VCD
-041. ETRON EM73D044VCG
-042. ETRON EM73D044VCH
-043. ETRON EM73D044SNA
-044. ETRON EM73D044SNC
-045. ETRON EM73D044SND
-046. ETRON EM73D044SNF
-047. ETRON EM73E044SNA
-048. TOSHIBA TC58CVG0S3H
-049. TOSHIBA TC58CVG1S3H
-050. TOSHIBA TC58CVG2S0H
-051. KIOXIA TC58CVG2S0HRAIJ
-052. MICRON MT29F1G01
-053. MICRON MT29F2G01
-054. MICRON MT29F4G01
-055. HEYANG HYF1GQ4UAACAE
-056. HEYANG HYF2GQ4UAACAE
-057. HEYANG HYF2GQ4UHCCAE
-058. HEYANG HYF1GQ4UDACAE
-059. HEYANG HYF2GQ4UDACAE
-060. PN PN26G01A-X
-061. PN PN26G02A-X
-062. PN PN26Q01A-X
-063. ATO ATO25D1GA
-064. ATO ATO25D2GA
-065. ATO ATO25D2GB
-066. FM FM25S01
-067. FM FM25S01A
-068. FM FM25S02A
-069. FM FM25G01B
-070. FM FM25G02B
-071. FM FM25G02C
-072. FM FM25G02
-073. XTX XT26G02B
-074. XTX XT26G01C
-075. XTX XT26G02C
-076. XTX XT26G01A
-077. XTX XT26G02A
-078. MIRA PSU1GS20BN
-079. BIWIN BWJX08U
-080. BIWIN BWET08U
-081. FORESEE FS35ND01GD1F1
-082. FORESEE FS35ND01GS1F1
-083. FORESEE FS35ND02GS2F1
-084. FORESEE FS35ND02GD1F1
-085. FORESEE FS35ND01GS1Y2
-086. FORESEE FS35ND02G-S3Y2
-087. FORESEE FS35ND04G-S2Y2
-088. DS DS35Q2GA
-089. DS DS35M2GA
-090. DS DS35Q1GA
-091. DS DS35M1GA
-092. FISON CS11G0T0A0AA
-093. FISON CS11G1T0A0AA
-094. FISON CS11G0G0A0AA
-095. TYM TYM25D2GA01
-096. TYM TYM25D2GA02
-097. TYM TYM25D1GA03
-098. XINCUN XCSP1AAWH-NT
+028. MXIC MX35LF1G24AD
+029. MXIC MX35LF2G24AD
+030. MXIC MX35LF4G24AD
+031. MXIC MX35UF1GE4AD
+032. MXIC MX35UF2GE4AD
+033. MXIC MX35UF4GE4AD
+034. ZENTEL A5U12A21ASC
+035. ZENTEL A5U1GA21BWS
+036. ETRON EM73C044SNB
+037. ETRON EM73C044SND
+038. ETRON EM73C044SNF
+039. ETRON EM73C044VCA
+040. ETRON EM73C044VCD
+041. ETRON EM73D044VCA
+042. ETRON EM73D044VCB
+043. ETRON EM73D044VCD
+044. ETRON EM73D044VCG
+045. ETRON EM73D044VCH
+046. ETRON EM73D044SNA
+047. ETRON EM73D044SNC
+048. ETRON EM73D044SND
+049. ETRON EM73D044SNF
+050. ETRON EM73E044SNA
+051. TOSHIBA TC58CVG0S3H
+052. TOSHIBA TC58CVG1S3H
+053. TOSHIBA TC58CVG2S0H
+054. KIOXIA TC58CVG2S0HRAIJ
+055. MICRON MT29F1G01
+056. MICRON MT29F2G01
+057. MICRON MT29F4G01
+058. HEYANG HYF1GQ4UAACAE
+059. HEYANG HYF2GQ4UAACAE
+060. HEYANG HYF2GQ4UHCCAE
+061. HEYANG HYF1GQ4UDACAE
+062. HEYANG HYF2GQ4UDACAE
+063. PN PN26G01A-X
+064. PN PN26G02A-X
+065. PN PN26Q01A-X
+066. ATO ATO25D1GA
+067. ATO ATO25D2GA
+068. ATO ATO25D2GB
+069. FM FM25S01
+070. FM FM25S01A
+071. FM FM25S02A
+072. FM FM25G01B
+073. FM FM25G02B
+074. FM FM25G02C
+075. FM FM25G02
+076. XTX XT26G02B
+077. XTX XT26G01C
+078. XTX XT26G02C
+079. XTX XT26G01A
+080. XTX XT26G02A
+081. MIRA PSU1GS20BN
+082. BIWIN BWJX08U
+083. BIWIN BWET08U
+084. FORESEE FS35ND01GD1F1
+085. FORESEE FS35ND01GS1F1
+086. FORESEE FS35ND02GS2F1
+087. FORESEE FS35ND02GD1F1
+088. FORESEE FS35ND01GS1Y2
+089. FORESEE FS35ND02G-S3Y2
+090. FORESEE FS35ND04G-S2Y2
+091. DS DS35Q2GA
+092. DS DS35M2GA
+093. DS DS35Q1GA
+094. DS DS35M1GA
+095. FISON CS11G0T0A0AA
+096. FISON CS11G1T0A0AA
+097. FISON CS11G0G0A0AA
+098. TYM TYM25D2GA01
+099. TYM TYM25D2GA02
+100. TYM TYM25D1GA03
+101. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
